@@ -1,3 +1,7 @@
+2010-05-22 yalovoy <yalovoy@gmail.com>
+	* fixes #1463 Always show branch rule set name with action "Branch"
+	affected files: RuleSetView.cpp, RuleSetViewDelegate.cpp, RuleSetViewDelegate.h
+
 2010-05-21  vadim  <vadim@vk.crocodile.org>
 
 	* RuleOptionsDialog.cpp (RuleOptionsDialog::loadFWObject):
